--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   <option value="seventh">4和音</option>
                 </select>
               </label>
-              <button id="btn-manual-transpose" class="ghost">移調する</button>
+              <button id="btn-manual-transpose" class="ghost">移調</button>
             </div>
           </div>
           <div class="palette-row">
